# mimir-chat

./: README.md
chat-api/: pyproject.toml
chat-api/src/chat_api/app/: main.py
