[project]
name = "chat-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "openai>=1.70.0",
    "pydantic-ai>=0.0.52",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
]
