[project]
name = "chat_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mngeow", email = "mngeowcy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-ai>=0.0.52",
    "pydantic-settings>=2.8.1",
    "taskipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
app = "uvicorn chat_api.app.main:app --port 9000 --workers 1 --reload"